# ssrd

./: CMakeLists.txt  LICENSE  README.md  feed.h264
client/: AudioStreamPlayer.h  Client.cpp  Client.h  StreamPlayer.cpp  StreamPlayer.h  Window.h  main.cpp
common/: AudioDecoder.h  AudioEncoder.h  Client.h  Constant.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  OpenSSL.h  Payload.h  Protocol.h  Socket.cpp  Socket.h  Utility.h
glad/include/glad/: glad.h
glad/src/: glad.c
server/: Helpers.h  Keys.h  R2.cpp  R2.h  Remote.cpp  Remote.h  Server.cpp  Server.h  main.cpp
server/Record/: Record.h  RecordFactory.h  RecordLinux.cpp  RecordLinux.h  RecordWindows.cpp  RecordWindows.h
server/Remote/: Encode.cpp  Encode.h  Remote.cpp  Remote.h
src/: Stream.cpp  Stream.h  Utility.h  main.cpp
src-old/src/: Stream.cpp  Stream.h  main.cpp
src/Remote/: Encode.h  Remote.cpp  Remote.h
